Revert blue names, add View Details link on cards

--- a/index.html
+++ b/index.html
@@ -661,13 +661,9 @@
         .product-name {
             font-size: 0.85rem;
             font-weight: 700;
-            color: #2B7DE9;
+            color: #0A1628;
             margin-bottom: 2px;
             line-height: 1.3;
-        }
-
-        .product-card:hover .product-name {
-            text-decoration: underline;
         }
 
         .product-description {
@@ -2056,6 +2052,7 @@
                     '<div class="card-top-row"><span class="product-category ' + categoryClass + '">' + categoryName + '</span>' + coaBadge + '</div>' +
                     '<div class="product-name">' + product.name + '</div>' +
                     '<div class="product-price">$' + product.price + '</div>' +
+                    '<span class="view-details">View Details →</span>' +
                     '<div class="card-actions"><button class="' + btnClass + '" data-name="' + product.name.replace(/"/g, '&quot;') + '" data-price="' + product.price + '">' + btnText + '</button></div>';
                 
                 card.style.cursor = 'pointer';
