--- a/shop.html
+++ b/shop.html
@@ -1491,7 +1491,7 @@
         // Product Data
         var products = [
             {
-                name: "Semaglutide",
+                name: "Semaglutide 10mg",
                 category: "glp",
                 price: 30,
                 coa: true,
@@ -1536,7 +1536,7 @@
                 applications: "Amylin receptor signaling research, gastric emptying mechanisms, satiety pathway studies, pancreatic beta-cell co-secretion, pramlintide comparison pharmacology, calcitonin receptor family research"
             },
             {
-                name: "BPC-157/TB-500",
+                name: "BPC-157/TB-500 10mg/10mg",
                 category: "tissue",
                 price: 40,
                 coa: true,
@@ -1581,7 +1581,7 @@
                 applications: "T-cell differentiation studies, thymic function research, bioregulator peptide mechanisms, immune system modulation, immunosenescence models, adaptive immunity research, peptide-DNA interaction studies"
             },
             {
-                name: "Laennec Ampules",
+                name: "Laennec 2ml x 50 Ampules",
                 category: "tissue",
                 price: 425,
                 coa: true,
@@ -1626,7 +1626,7 @@
                 applications: "Dual-pathway GH secretagogue studies, GHRH/ghrelin synergy mechanisms, amplified GH pulse research, combined secretagogue pharmacodynamics, maximal endogenous GH release models"
             },
             {
-                name: "HGH 191",
+                name: "HGH 191 (1500iu)",
                 category: "gh",
                 price: 28,
                 coa: true,
@@ -1706,7 +1706,7 @@
                 applications: "Redox biochemistry, sirtuin activation research, cellular energy metabolism, PARP enzyme function, mitochondrial studies, NAD+/NADH ratio measurement, cellular aging mechanisms, DNA repair pathways"
             },
             {
-                name: "Glutathione 1200mg",
+                name: "Glutathione 1200mg (Korea) x10 Vials",
                 category: "antioxidants",
                 price: 85,
                 coa: true,
@@ -1733,7 +1733,7 @@
                 applications: "Mitochondrial membrane research, cardiolipin interaction studies, cristae structure biology, mitochondrial ROS modulation, ischemia-reperfusion models, mitochondrial bioenergetics, targeted mitochondrial protection"
             },
             {
-                name: "Thioctic Acid (ALA)",
+                name: "Thioctic Acid (ALA) 25mg/5ml",
                 category: "antioxidants",
                 price: 75,
                 coa: true,
@@ -1742,7 +1742,7 @@
                 applications: "Mitochondrial cofactor function, universal antioxidant mechanisms, antioxidant regeneration studies, glucose metabolism research, neuroprotection models, metal chelation research, redox signaling pathways"
             },
             {
-                name: "Vitamin C IV",
+                name: "Vitamin C 10mg/20ml",
                 category: "antioxidants",
                 price: 75,
                 coa: true,
@@ -1937,14 +1937,16 @@
         // Render featured products
         // Product name to URL slug mapping
         var slugOverrides = {
-            'BPC-157/TB-500': 'bpc-157-tb-500',
+            'BPC-157/TB-500 10mg/10mg': 'bpc-157-tb-500',
+            'Semaglutide 10mg': 'semaglutide',
+            'HGH 191 (1500iu)': 'hgh-fragment-191',
+            'Laennec 2ml x 50 Ampules': 'laennec',
+            'Glutathione 1200mg (Korea) x10 Vials': 'glutathione-korean',
+            'Vitamin C 10mg/20ml': 'vitamin-c-iv',
+            'Thioctic Acid (ALA) 25mg/5ml': 'thioctic-acid',
             'CJC-1295 (no DAC)': 'cjc-1295',
             'CJC-1295/Ipamorelin': 'cjc-ipamorelin',
-            'HGH 191': 'hgh-fragment-191',
             'SS-31 (Elamipretide)': 'ss-31',
-            'Thioctic Acid (ALA)': 'thioctic-acid',
-            'Glutathione 1200mg': 'glutathione-korean',
-            'Laennec Ampules': 'laennec',
             'PT-141': 'pt-141',
             'Bacteriostatic Water 30ml': 'bacteriostatic-water'
         };
