Rename HGH 191 → rHGH 191aa 1500iu (Somatropin), PT-141 → PT-141 (Bremelanotide)

--- a/index.html
+++ b/index.html
@@ -1626,7 +1626,7 @@
                 applications: "Dual-pathway GH secretagogue studies, GHRH/ghrelin synergy mechanisms, amplified GH pulse research, combined secretagogue pharmacodynamics, maximal endogenous GH release models"
             },
             {
-                name: "HGH 191 (1500iu)",
+                name: "rHGH 191aa 1500iu (Somatropin)",
                 category: "gh",
                 price: 28,
                 coa: true,
@@ -1832,7 +1832,7 @@
                 applications: "TREK-1 channel modulation, neuroplasticity mechanisms, neuroprotection studies, potassium channel biology, synaptic plasticity research, neurogenesis studies, neurotrophic signaling pathways"
             },
             {
-                name: "PT-141",
+                name: "PT-141 (Bremelanotide)",
                 category: "melanocortin",
                 price: 36,
                 coa: true,
@@ -1939,7 +1939,7 @@
         var slugOverrides = {
             'BPC-157/TB-500 10mg/10mg': 'bpc-157-tb-500',
             'Semaglutide 10mg': 'semaglutide',
-            'HGH 191 (1500iu)': 'hgh-fragment-191',
+            'rHGH 191aa 1500iu (Somatropin)': 'hgh-fragment-191',
             'Laennec 2ml x 50 Ampules': 'laennec',
             'Glutathione 1200mg (Korea) x10 Vials': 'glutathione-korean',
             'Vitamin C 10mg/20ml': 'vitamin-c-iv',
@@ -1947,7 +1947,7 @@
             'CJC-1295 (no DAC)': 'cjc-1295',
             'CJC-1295/Ipamorelin': 'cjc-ipamorelin',
             'SS-31 (Elamipretide)': 'ss-31',
-            'PT-141': 'pt-141',
+            'PT-141 (Bremelanotide)': 'pt-141',
             'Bacteriostatic Water 30ml': 'bacteriostatic-water'
         };
         function getProductSlug(name) {
