--- a/shop.html
+++ b/shop.html
@@ -1554,7 +1554,7 @@
                 applications: "NF-κB signaling inhibition, inflammatory cytokine modulation, inflammatory bowel disease models, mucosal immunity research, wound healing inflammation control, melanocortin peptide fragment studies"
             },
             {
-                name: "GHK-Cu 100mg",
+                name: "GHK-Cu (Copper Peptide) 100mg",
                 category: "tissue",
                 price: 31,
                 coa: true,
@@ -1608,7 +1608,7 @@
                 applications: "Ghrelin receptor (GHS-R1a) pharmacology, selective GH secretion mechanisms, growth hormone pulse dynamics, somatotroph receptor selectivity, GHRP comparative studies, non-GHRH secretagogue pathways"
             },
             {
-                name: "CJC-1295 (no DAC)",
+                name: "CJC-1295 No DAC (Mod GRF 1-29)",
                 category: "gh",
                 price: 42,
                 coa: true,
@@ -1617,7 +1617,7 @@
                 applications: "GHRH analogue pharmacology, pulsatile GH release patterns, GHRH receptor binding kinetics, peptide stability mechanisms, growth hormone secretion dynamics, somatotroph physiology"
             },
             {
-                name: "CJC-1295/Ipamorelin",
+                name: "CJC-1295/Ipamorelin Blend",
                 category: "gh",
                 price: 42,
                 coa: true,
@@ -1805,7 +1805,7 @@
                 applications: "Multi-peptide sleep architecture studies, circadian entrainment mechanisms, neurotransmitter interaction models in sleep, restorative sleep pathway research, sleep disorder neurochemistry"
             },
             {
-                name: "FOXO4-DRI 10mg",
+                name: "FOXO4-DRI (Proxofim) 10mg",
                 category: "longevity",
                 price: 67,
                 coa: true,
@@ -1814,7 +1814,7 @@
                 applications: "Senescent cell biology, FOXO4-p53 interaction studies, senolytic mechanism research, cellular aging models, apoptosis pathway research, SASP modulation, targeted cellular aging interventions"
             },
             {
-                name: "Epithalon 50mg",
+                name: "Epithalon (Epitalon) 50mg",
                 category: "longevity",
                 price: 66,
                 coa: true,
@@ -1868,7 +1868,7 @@
                 applications: "SNARE protein biology, synaptic vesicle fusion mechanisms, neuromuscular junction research, acetylcholine release studies, exocytosis research, presynaptic signaling, metalloprotease mechanism studies"
             },
             {
-                name: "ARA-290 10mg",
+                name: "ARA-290 (Cibinetide) 10mg",
                 category: "advanced",
                 price: 24,
                 coa: true,
@@ -1944,8 +1944,8 @@
             'Glutathione 1200mg (Korea) x10 Vials': 'glutathione-korean',
             'Vitamin C 10mg/20ml': 'vitamin-c-iv',
             'Thioctic Acid (ALA) 25mg/5ml': 'thioctic-acid',
-            'CJC-1295 (no DAC)': 'cjc-1295',
-            'CJC-1295/Ipamorelin': 'cjc-ipamorelin',
+            'CJC-1295 No DAC (Mod GRF 1-29)': 'cjc-1295',
+            'CJC-1295/Ipamorelin Blend': 'cjc-ipamorelin',
             'SS-31 (Elamipretide)': 'ss-31',
             'PT-141 (Bremelanotide)': 'pt-141',
             'Bacteriostatic Water 30ml': 'bacteriostatic-water'
