Rename Lipo-C Ultra Blend → Amino Acid Blend (accurate: 9 amino acids + NAC, no lipotropic compounds)

--- a/index.html
+++ b/index.html
@@ -1679,12 +1679,12 @@
                 applications: "Mitochondrial fatty acid transport, beta-oxidation mechanisms, carnitine shuttle system research, acyl-carnitine metabolism, energy substrate utilization, mitochondrial function studies, carnitine deficiency models"
             },
             {
-                name: "Lipo-C Ultra Blend",
+                name: "Amino Acid Blend",
                 category: "metabolic",
                 price: 42,
                 coa: true,
-                shortDesc: "Premium comprehensive metabolic blend covering complete metabolic pathway support.",
-                fullDesc: "Lipo-C Ultra represents the apex of multi-component metabolic formulation. This premium blend incorporates every category of metabolic support compound: classic lipotropic factors, amino acids for protein synthesis, mitochondrial cofactors for energy production, and performance-enhancing compounds for cellular optimization.",
+                shortDesc: "9-amino acid + NAC blend for multi-pathway metabolic research.",
+                fullDesc: "A comprehensive 9-component amino acid formulation combining nitric oxide pathway precursors (L-Arginine, L-Ornithine, L-Citrulline), collagen synthesis substrates (L-Lysine, L-Proline), mitochondrial cofactors (L-Carnitine, L-Taurine), and antioxidant support (NAC, L-Glutamine) for multi-pathway metabolic research.",
                 applications: "Comprehensive metabolic system research, multi-pathway integration studies, maximal metabolic capacity models, system-level bioenergetics, performance optimization research, complex metabolic phenotyping"
             },
             {
