--- a/shop.html
+++ b/shop.html
@@ -2110,7 +2110,7 @@
             var storageText = 'Store lyophilized (freeze-dried) peptide at -20°C for long-term storage. Once reconstituted, store at 2-8°C (refrigerated) and use within 30 days. Avoid repeated freeze-thaw cycles. Keep away from direct light.';
             if (product.name === '5-Amino-1MQ 5mg') {
                 storageText = 'Store in a cool, dry place at room temperature (15-25°C). Keep away from direct light and moisture. Keep container tightly sealed.';
-            } else if (product.category === 'antioxidants' || product.name.indexOf('Lipo-C') !== -1 || product.name.indexOf('L-Carnitine') !== -1 || product.name.indexOf('Vitamin C') !== -1 || product.name.indexOf('Thioctic') !== -1) {
+            } else if (product.category === 'antioxidants' || product.name.indexOf('Lipo-C') !== -1 || product.name.indexOf('Amino Acid Blend') !== -1 || product.name.indexOf('L-Carnitine') !== -1 || product.name.indexOf('Vitamin C') !== -1 || product.name.indexOf('Thioctic') !== -1) {
                 storageText = 'Store at 2-8°C (refrigerated). Keep away from direct light. Do not freeze unless specified. Use within recommended timeframe once opened.';
             }
             body += '<h3>Storage</h3><p>' + storageText + '</p>';
