--- a/shop.html
+++ b/shop.html
@@ -1252,10 +1252,9 @@
                         <a href="#" onclick="filterCat('Advanced');return false">Advanced</a>
                     </div>
                 </span>
-                <a href="#" class="desktop-only" onclick="openPage('faq');return false">FAQ</a>
-                <a href="#" class="desktop-only" onclick="openPage('about');return false">About</a>
+                <a href="faq.html" class="desktop-only">FAQ</a>
+                <a href="about.html" class="desktop-only">About</a>
                 <a href="blog/" class="desktop-only">Blog</a>
-                <a href="https://peptideresourcecenter.com" target="_blank" class="desktop-only">Resources ↗</a>
                 </nav>
             </div>
             <div class="nav-icons">
@@ -1271,10 +1270,9 @@
     <div class="mobile-menu" id="mobileMenu">
         <button class="mobile-menu-close" onclick="toggleMobileMenu()">&times;</button>
         <a href="#shop" onclick="toggleMobileMenu()">Shop</a>
-        <a href="#" onclick="openPage('faq');toggleMobileMenu();return false">FAQ</a>
-        <a href="#" onclick="openPage('about');toggleMobileMenu();return false">About</a>
         <a href="blog/">Blog</a>
-        <a href="https://peptideresourcecenter.com" target="_blank">Resources ↗</a>
+        <a href="about.html">About</a>
+        <a href="faq.html">FAQ</a>
         <a href="mailto:support@prcpeptides.com">Contact</a>
     </div>
 
@@ -1473,10 +1471,9 @@
             <div style="font-size:0.75rem;color:#94A3B8;margin-bottom:1.5rem">Research-grade compounds for in vitro use</div>
             <div class="footer-links">
                 <a href="#shop">Shop</a>
-                <a href="#" onclick="openPage('faq');return false">FAQ</a>
-                <a href="#" onclick="openPage('about');return false">About</a>
+                <a href="faq.html">FAQ</a>
+                <a href="about.html">About</a>
                 <a href="blog/">Blog</a>
-                <a href="https://peptideresourcecenter.com" target="_blank">Resources ↗</a>
                 <a href="mailto:support@prcpeptides.com">Contact</a>
             </div>
             <div style="font-size:0.72rem;color:#94A3B8;margin-bottom:1rem">support@prcpeptides.com</div>
