--- a/products/lipo-c-max.html
+++ b/products/lipo-c-max.html
@@ -72,12 +72,13 @@
 <div class="product-price">$42</div>
 <div class="coa-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="20 6 9 17 4 12"/></svg> COA Available</div>
 </div>
-<div class="short-desc">A precision-formulated lipotropic blend combining methionine, inositol, choline, and L-carnitine—the foundational "MIC" factors that support hepatic lipid metabolism research.</div>
+<div class="short-desc">MIC lipotropic blend: L-Carnitine 20mg, L-Arginine 20mg, Methionine 25mg, Inositol 50mg, Choline 50mg, B6 25mg, B5 25mg. Darker red liquid.</div>
 <div class="specs-table"><table>
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10ml</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>Sequence</td><td>Lipotropic compound blend (Methionine, Inositol, Choline, L-Carnitine)</td></tr>
+<tr><td>Composition</td><td>L-Carnitine 20mg, L-Arginine 20mg, Methionine 25mg, Inositol 50mg, Choline 50mg, Vitamin B6 25mg, Vitamin B5 25mg</td></tr>
+<tr><td>Appearance</td><td>Darker red liquid</td></tr>
 <tr><td>CAS Number</td><td>Lipotropic blend</td></tr>
 <tr><td>Molecular Weight</td><td>Multi-component</td></tr>
 <tr><td>Molecular Formula</td><td>MIC + L-Carnitine</td></tr>
