--- a/shop.html
+++ b/shop.html
@@ -1662,8 +1662,8 @@
                 category: "metabolic",
                 price: 42,
                 coa: true,
-                shortDesc: "Precision lipotropic blend combining methionine, inositol, choline, and L-carnitine.",
-                fullDesc: "The Lipo-C MAX formulation recognizes that lipid metabolism requires multiple cofactors working in concert. Methionine provides methyl groups essential for phosphatidylcholine synthesis. Inositol participates in lipid messenger signaling. Choline serves as a precursor for phosphatidylcholine and prevents hepatic lipid accumulation. L-carnitine shuttles fatty acids into mitochondria.",
+                shortDesc: "MIC lipotropic blend: L-Carnitine 20mg, L-Arginine 20mg, Methionine 25mg, Inositol 50mg, Choline 50mg, B6 25mg, B5 25mg.",
+                fullDesc: "A comprehensive lipotropic formula combining the classic MIC stack (Methionine 25mg, Inositol 50mg, Choline 50mg) with L-Carnitine 20mg for mitochondrial fatty acid transport, L-Arginine 20mg for nitric oxide support, and B-vitamins (B6 25mg, B5 25mg) as essential metabolic cofactors. Darker red liquid.",
                 applications: "Lipotropic factor research, hepatic lipid metabolism, methyl donor biology, choline metabolism, mitochondrial fatty acid transport, one-carbon metabolism, phospholipid synthesis studies"
             },
             {
