--- a/index.html
+++ b/index.html
@@ -1252,6 +1252,7 @@
                         <a href="#" onclick="filterCat('Advanced');return false">Advanced</a>
                     </div>
                 </span>
+                <a href="compare.html" class="desktop-only">Price Compare</a>
                 <a href="faq.html" class="desktop-only">FAQ</a>
                 <a href="about.html" class="desktop-only">About</a>
                 <a href="blog/" class="desktop-only">Blog</a>
@@ -1270,6 +1271,7 @@
     <div class="mobile-menu" id="mobileMenu">
         <button class="mobile-menu-close" onclick="toggleMobileMenu()">&times;</button>
         <a href="#shop" onclick="toggleMobileMenu()">Shop</a>
+        <a href="compare.html">Price Compare</a>
         <a href="blog/">Blog</a>
         <a href="about.html">About</a>
         <a href="faq.html">FAQ</a>
