Mobile UX: hide $/mg and Code columns, no horizontal scroll, tighter spacing, fix spotlight color

--- a/compare.html
+++ b/compare.html
@@ -27,7 +27,7 @@ body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica N
 .spotlight{padding:2rem 1.25rem;background:var(--gray-50);border-bottom:1px solid var(--gray-200)}
 .spotlight-header{display:flex;align-items:center;gap:.5rem;margin-bottom:1.25rem}
 .spotlight-icon{font-size:1.1rem}
-.spotlight-title{font-size:.7rem;font-weight:800;color:var(--amber);text-transform:uppercase;letter-spacing:2.5px}
+.spotlight-title{font-size:.7rem;font-weight:800;color:var(--navy);text-transform:uppercase;letter-spacing:2.5px}
 .spotlight-cards{display:flex;gap:1rem;overflow-x:auto;-webkit-overflow-scrolling:touch;padding-bottom:.75rem;scroll-snap-type:x mandatory}
 .spot-card{flex:0 0 auto;min-width:260px;background:var(--white);border:1px solid var(--gray-200);border-radius:12px;padding:1.25rem 1.35rem;scroll-snap-align:start;position:relative;overflow:hidden;box-shadow:0 1px 3px rgba(0,0,0,.06)}
 .spot-card::before{content:"";position:absolute;top:0;left:0;right:0;height:2px;background:linear-gradient(90deg,var(--green),#06B6D4)}
@@ -109,8 +109,8 @@ body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica N
 .footer-disclaimer{max-width:600px;margin:0 auto;padding:1.25rem 1.5rem;background:rgba(239,68,68,.06);border:1px solid rgba(239,68,68,.15);border-radius:10px}
 .footer-disclaimer-title{font-size:.7rem;font-weight:800;color:#EF4444;text-transform:uppercase;letter-spacing:1.5px;margin-bottom:.5rem}
 .footer-disclaimer-text{font-size:.7rem;color:var(--gray-400);line-height:1.6;font-weight:500}
-@media(max-width:640px){.header{padding:2rem 1.25rem 1.5rem}.header-title{font-size:1.5rem}.header-subtitle{font-size:.7rem}.stats{grid-template-columns:repeat(2,1fr)}.stat{padding:1.25rem .6rem}.stat-value{font-size:1.85rem}.spotlight{padding:1.5rem 1rem}.spot-card{min-width:240px}.filters{padding:1rem}.filter-row{flex-direction:column}.filter-input,.filter-select{width:100%}.table{font-size:.8rem}.table th,.table td{padding:.7rem .6rem}.vendor-grid{grid-template-columns:repeat(auto-fill,minmax(160px,1fr))}}
-@media(max-width:480px){.header-title{font-size:1.35rem}.stat-value{font-size:1.65rem}.stat-label{font-size:.5rem}.table{font-size:.75rem;min-width:650px}}
+@media(max-width:640px){.header{padding:1.5rem 1.25rem 1.25rem}.header-title{font-size:1.5rem}.header-subtitle{font-size:.7rem}.stats{grid-template-columns:repeat(2,1fr)}.stat{padding:1rem .6rem}.stat-value{font-size:1.85rem}.spotlight{padding:1.25rem 1rem}.spot-card{min-width:220px;padding:1rem 1.1rem}.filters{padding:1rem}.filter-row{flex-direction:column}.filter-input,.filter-select{width:100%}.table{font-size:.8rem;min-width:auto!important}.table .td-ppm,.table th:nth-child(4){display:none}.table .td-code,.table th:nth-child(6){display:none}.table th,.table td{padding:.65rem .5rem}.td-name{font-size:.8rem}.td-strength{font-size:.75rem}.td-vendor{font-size:.78rem}.price-val{font-size:.85rem}.vendor-grid{grid-template-columns:repeat(auto-fill,minmax(160px,1fr))}}
+@media(max-width:480px){.header-title{font-size:1.35rem}.stat-value{font-size:1.65rem}.stat-label{font-size:.5rem}}
 </style></head><body>
 <header class="header"><div class="header-content"><div class="header-eyebrow">BY PEPTIDE RESOURCE CENTER</div><h1 class="header-title">Peptide Price Comparison</h1><div class="header-subtitle">The Definitive Research Peptide Market Index</div></div></header>
 <section class="stats"><div class="stat"><div class="stat-icon">🧬</div><div class="stat-value">97</div><div class="stat-label">Peptides</div></div><div class="stat"><div class="stat-icon">🏢</div><div class="stat-value">24</div><div class="stat-label">Vendors</div></div><div class="stat"><div class="stat-icon">🧪</div><div class="stat-value">44</div><div class="stat-label">PRC Products</div></div><div class="stat"><div class="stat-icon">💰</div><div class="stat-value">70%</div><div class="stat-label">Max Savings</div></div></section>
