--- a/compare-prc.html
+++ b/compare-prc.html
@@ -57,6 +57,22 @@ body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-
   .filter-row { flex-direction: column; }
   .filter-input, .filter-select { width: 100%; }
 }
+
+.cat-picker { padding: 1.5rem 1.25rem; }
+.cat-picker-title { font-size: 0.7rem; font-weight: 800; color: #64748B; text-transform: uppercase; letter-spacing: 2px; margin-bottom: 1rem; text-align: center; }
+.cat-picker-grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 0.75rem; max-width: 500px; margin: 0 auto; }
+.cat-picker-btn { display: flex; align-items: center; gap: 0.75rem; padding: 1rem 1.25rem; background: #FFFFFF; border: 1px solid #E2E8F0; border-radius: 8px; cursor: pointer; transition: all 0.2s; user-select: none; -webkit-user-select: none; }
+.cat-picker-btn:hover { border-color: #CBD5E1; box-shadow: 0 2px 8px rgba(0,0,0,0.06); }
+.cat-picker-btn.active { border-color: var(--btn-color); box-shadow: 0 0 0 2px var(--btn-color); }
+.cat-picker-dot { width: 12px; height: 12px; border-radius: 50%; flex-shrink: 0; }
+.cat-picker-label { font-size: 0.85rem; font-weight: 700; color: #0A1628; }
+.cat-picker-count { font-size: 0.7rem; color: #94A3B8; font-weight: 600; margin-left: auto; }
+.cat-picker-all { display: block; margin: 1rem auto 0; padding: 0.6rem 1.5rem; font-size: 0.75rem; font-weight: 700; color: #64748B; background: #F8FAFC; border: 1px solid #E2E8F0; border-radius: 6px; cursor: pointer; transition: all 0.15s; }
+.cat-picker-all:hover { background: #E2E8F0; }
+.category-section { display: none; }
+.category-section.visible { display: block; }
+.back-btn { display: none; margin: 1rem 1.25rem 0; padding: 0.5rem 1rem; font-size: 0.8rem; font-weight: 700; color: #2B7DE9; background: none; border: 1px solid #2B7DE9; border-radius: 6px; cursor: pointer; transition: all 0.15s; }
+.back-btn:hover { background: rgba(43,125,233,0.06); }
 </style>
 </head><body>
 <header class="header">
@@ -120,6 +136,21 @@ body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-
 </div>
 <div class="filter-info" id="filterInfo">Showing 539 of 539 results</div>
 </section>
+<section class="cat-picker" id="catPicker">
+<div class="cat-picker-title">Choose a Category</div>
+<div class="cat-picker-grid">
+<div class="cat-picker-btn" style="--btn-color:#3B82F6" onclick="pickCat('glp')"><span class="cat-picker-dot" style="background:#3B82F6"></span><span class="cat-picker-label">GLP-1</span><span class="cat-picker-count">95</span></div>
+<div class="cat-picker-btn" style="--btn-color:#10B981" onclick="pickCat('tissue')"><span class="cat-picker-dot" style="background:#10B981"></span><span class="cat-picker-label">Tissue Repair</span><span class="cat-picker-count">98</span></div>
+<div class="cat-picker-btn" style="--btn-color:#F59E0B" onclick="pickCat('gh')"><span class="cat-picker-dot" style="background:#F59E0B"></span><span class="cat-picker-label">Growth Hormone</span><span class="cat-picker-count">86</span></div>
+<div class="cat-picker-btn" style="--btn-color:#EF4444" onclick="pickCat('metabolic')"><span class="cat-picker-dot" style="background:#EF4444"></span><span class="cat-picker-label">Metabolic</span><span class="cat-picker-count">54</span></div>
+<div class="cat-picker-btn" style="--btn-color:#06B6D4" onclick="pickCat('neuro')"><span class="cat-picker-dot" style="background:#06B6D4"></span><span class="cat-picker-label">Neuropeptides</span><span class="cat-picker-count">42</span></div>
+<div class="cat-picker-btn" style="--btn-color:#EC4899" onclick="pickCat('melanocortin')"><span class="cat-picker-dot" style="background:#EC4899"></span><span class="cat-picker-label">Melanocortin</span><span class="cat-picker-count">28</span></div>
+<div class="cat-picker-btn" style="--btn-color:#EAB308" onclick="pickCat('longevity')"><span class="cat-picker-dot" style="background:#EAB308"></span><span class="cat-picker-label">Longevity</span><span class="cat-picker-count">76</span></div>
+<div class="cat-picker-btn" style="--btn-color:#94A3B8" onclick="pickCat('other')"><span class="cat-picker-dot" style="background:#94A3B8"></span><span class="cat-picker-label">Other</span><span class="cat-picker-count">60</span></div>
+</div>
+<button class="cat-picker-all" onclick="pickCat('all')">Show All Categories</button>
+</section>
+<button class="back-btn" id="backBtn" onclick="backToPicker()">← Back to Categories</button>
 <section class="category-section" data-category="glp" style="--cat-color: #3B82F6">
 <div class="category-header" style="border-left-color: #3B82F6">
 <div class="category-name">GLP-1 Peptides</div>
@@ -3919,6 +3950,34 @@ function filterCards() {
     section.style.display = hasVisible ? "block" : "none";
   }
   document.getElementById("filterInfo").textContent = "Showing " + visible + " of " + total + " results";
+}
+
+function pickCat(cat) {
+    var sections = document.querySelectorAll('.category-section');
+    var picker = document.getElementById('catPicker');
+    var backBtn = document.getElementById('backBtn');
+    if (cat === 'all') {
+        for (var i = 0; i < sections.length; i++) { sections[i].classList.add('visible'); }
+    } else {
+        for (var i = 0; i < sections.length; i++) {
+            if (sections[i].getAttribute('data-category') === cat) {
+                sections[i].classList.add('visible');
+            } else {
+                sections[i].classList.remove('visible');
+            }
+        }
+    }
+    picker.style.display = 'none';
+    backBtn.style.display = 'block';
+}
+function backToPicker() {
+    var sections = document.querySelectorAll('.category-section');
+    var picker = document.getElementById('catPicker');
+    var backBtn = document.getElementById('backBtn');
+    for (var i = 0; i < sections.length; i++) { sections[i].classList.remove('visible'); }
+    picker.style.display = 'block';
+    backBtn.style.display = 'none';
+    window.scrollTo(0, 0);
 }
 </script>
 </body></html>
