Fix testing claim — remove Janoshik-specific, use generic third-party testing

--- a/faq.html
+++ b/faq.html
@@ -20,7 +20,7 @@
             {"@type": "Question", "name": "How long does shipping take?", "acceptedAnswer": {"@type": "Answer", "text": "Orders ship the next business day. Standard shipping takes 3-5 business days; expedited shipping is faster."}},
             {"@type": "Question", "name": "Is there free shipping?", "acceptedAnswer": {"@type": "Answer", "text": "Yes! All orders over $150 ship free."}},
             {"@type": "Question", "name": "What's included with my order?", "acceptedAnswer": {"@type": "Answer", "text": "Every order includes a free reconstitution kit: bacteriostatic water, syringes, and alcohol swabs."}},
-            {"@type": "Question", "name": "What purity are your peptides?", "acceptedAnswer": {"@type": "Answer", "text": "All of our peptides are ≥98% purity, verified by independent third-party testing through Janoshik Analytical."}},
+            {"@type": "Question", "name": "What purity are your peptides?", "acceptedAnswer": {"@type": "Answer", "text": "All of our peptides are ≥98% purity, verified by independent third-party laboratory testing (HPLC &amp; Mass Spectrometry)."}},
             {"@type": "Question", "name": "Do you provide Certificates of Analysis (COAs)?", "acceptedAnswer": {"@type": "Answer", "text": "Yes. Email support@prcpeptides.com to request the COA for any product."}},
             {"@type": "Question", "name": "How should I store peptides?", "acceptedAnswer": {"@type": "Answer", "text": "Lyophilized (powder) peptides: store in the freezer at -20°C for long-term storage, or in the fridge at 2-8°C for short-term. Reconstituted peptides: refrigerate at 2-8°C and use within 30 days."}},
             {"@type": "Question", "name": "How do I reconstitute peptides?", "acceptedAnswer": {"@type": "Answer", "text": "We have a detailed guide on our blog. Visit our How to Reconstitute Peptides guide for step-by-step instructions."}},
@@ -186,7 +186,7 @@
 
             <details>
                 <summary>What purity are your peptides?</summary>
-                <div class="faq-answer">All of our peptides are <strong>≥98% purity</strong>, verified through independent third-party testing by <strong>Janoshik Analytical</strong>.</div>
+                <div class="faq-answer">All of our peptides are <strong>≥98% purity</strong>, verified through <strong>independent third-party laboratory testing</strong> (HPLC &amp; Mass Spectrometry).</div>
             </details>
 
             <details>
