Remove Janoshik references from about page

--- a/about.html
+++ b/about.html
@@ -126,10 +126,10 @@
 
         <div class="about-section">
             <h2>🧪 Our Standards</h2>
-            <p>Every product we sell meets or exceeds 98% purity, verified through independent third-party testing by Janoshik Analytical — one of the most respected analytical labs in the industry.</p>
+            <p>Every product we sell meets or exceeds 98% purity, verified through independent third-party laboratory testing (HPLC &amp; Mass Spectrometry).</p>
             <ul>
                 <li>≥98% purity on all peptides</li>
-                <li>Third-party tested by Janoshik Analytical</li>
+                <li>Third-party tested (HPLC &amp; Mass Spectrometry)</li>
                 <li>Certificates of Analysis (COAs) available for every product</li>
                 <li>Free reconstitution kit included with every order</li>
             </ul>
